Change according to native dependencies