@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.librawfx</groupId>
     <artifactId>LibRawFX</artifactId>
-    <version>1.0</version>
+    <version>1.0.1-SNAPSHOT</version>
     
     <name>LibRawFX</name>
     <description>This installs the native lib libraw as a JavaFX Image format provider similar to imageIO before on Swing</description>
@@ -113,7 +113,7 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
+            <!--<plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>3.2.0</version>                
@@ -125,13 +125,13 @@
                         </goals>
                         <configuration>                            
                             <additionalJOptions>                                
-                                <additionalJOption>--add-exports=javafx.graphics/com.sun.javafx.iio=org.librawfx</additionalJOption>                                
-                                <additionalJOption>--add-exports=javafx.graphics/com.sun.javafx.iio.common=org.librawfx</additionalJOption>
+                                <additionalJOption>-add-exports=javafx.graphics/com.sun.javafx.iio=org.librawfx</additionalJOption>                                
+                                <additionalJOption>-add-exports=javafx.graphics/com.sun.javafx.iio.common=org.librawfx</additionalJOption>
                             </additionalJOptions>
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>            
+            </plugin>-->            
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
